--- a/AZSChool/AZSchool.WEB/wwwroot/css/MainPage.css
+++ b/AZSChool/AZSchool.WEB/wwwroot/css/MainPage.css
@@ -1,6 +1,5 @@
 .u-section-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("../images/3fb7edbfa9a99b6d231c902fc17aae10.jpeg");
-  background-position: 50% 50%;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("../images/-2.jpg");
 }
 
 .u-section-1 .u-sheet-1 {
@@ -8,32 +7,31 @@
 }
 
 .u-section-1 .u-group-1 {
-  width: 807px;
-  min-height: 379px;
-  margin: 314px auto 66px 0;
+  min-height: 421px;
+  margin-top: 314px;
+  margin-bottom: 60px;
+  height: auto;
 }
 
 .u-section-1 .u-text-1 {
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-bottom: 0;
   font-weight: 700;
+  margin: 0 20px;
 }
 
 .u-section-1 .u-text-2 {
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: 2px;
-  margin: 20px 20px 40px;
+  margin: 20px 20px 0;
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 400px;
+  .u-section-1 {
+    background-position: 50% 50%;
   }
 
-  .u-section-1 .u-group-1 {
-    width: 665px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 400px;
   }
 
   .u-section-1 .u-text-1 {
@@ -51,10 +49,6 @@
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-group-1 {
-    width: 510px;
-  }
-
   .u-section-1 .u-text-1 {
     margin-left: 13px;
     margin-right: 13px;
@@ -67,10 +61,6 @@
 }
 
 @media (max-width: 767px) {
-  .u-section-1 .u-group-1 {
-    width: 478px;
-  }
-
   .u-section-1 .u-text-1 {
     margin-left: 9px;
     margin-right: 9px;
@@ -83,10 +73,6 @@
 }
 
 @media (max-width: 575px) {
-  .u-section-1 .u-group-1 {
-    width: 340px;
-  }
-
   .u-section-1 .u-text-1 {
     margin-left: 6px;
     margin-right: 6px;
@@ -116,17 +102,17 @@
   height: 38px;
   width: 38px;
   display: block;
-  margin: 30px 305px 0 0;
+  margin: 0 305px 0 0;
 }
 
 .u-section-2 .u-text-1 {
   font-weight: 700;
-  margin: 17px 30px 0 0;
+  margin: 17px 7px 0 0;
 }
 
 .u-section-2 .u-text-2 {
   font-size: 0.875rem;
-  margin: 7px 30px 30px 0;
+  margin: 7px 30px 0 0;
 }
 
 .u-section-2 .u-layout-cell-2 {
@@ -168,17 +154,17 @@
   height: 38px;
   width: 38px;
   display: block;
-  margin: 30px 305px 0 0;
+  margin: 0 305px 0 0;
 }
 
 .u-section-2 .u-text-5 {
   font-weight: 700;
-  margin: 17px 30px 0 0;
+  margin: 17px 0 0;
 }
 
 .u-section-2 .u-text-6 {
   font-size: 0.875rem;
-  margin: 7px 30px 30px 0;
+  margin: 7px 30px 0 0;
 }
 
 @media (max-width: 1199px) {
@@ -189,6 +175,10 @@
 
   .u-section-2 .u-container-layout-1 {
     padding-left: 25px;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-right: 30px;
   }
 
   .u-section-2 .u-container-layout-2 {
@@ -341,330 +331,708 @@
     margin-right: 9px;
   }
 }.u-section-3 {
-  background-image: none;
-}
-
-.u-section-3 .u-image-1 {
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left: 0;
-  height: 476px;
-  object-position: 50% 12.04%;
-  background-position: 50% 12.04%;
-  filter: brightness(0.5);
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url("../images/3b91742c7e026b49e43d4d9e3bc6edf4.jpeg");
 }
 
 .u-section-3 .u-sheet-1 {
-  min-height: 776px;
-  margin: -475px auto 0;
+  min-height: 50vw;
+}
+
+.u-section-3 .u-tabs-1 {
+  min-height: 691px;
+  margin-top: 153px;
+  margin-bottom: 0;
+  height: auto;
+  margin-left: 0;
+}
+
+.u-section-3 .u-tab-item-2 {
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-tab-item-3 {
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-tab-item-4 {
+  margin-bottom: 0;
+}
+
+.u-section-3 .u-container-layout-1 {
+  padding: 30px;
+}
+
+.u-section-3 .u-image-1 {
+  width: 330px;
+  height: 330px;
+  margin: 0 auto 0 0;
+}
+
+.u-section-3 .u-image-2 {
+  width: 330px;
+  height: 330px;
+  margin: -330px 0 0 auto;
+}
+
+.u-section-3 .u-image-3 {
+  width: 330px;
+  height: 330px;
+  margin: -330px auto 0;
+}
+
+.u-section-3 .u-text-1 {
+  margin: 20px auto 0 48px;
+}
+
+.u-section-3 .u-text-2 {
+  margin: -28px auto 0;
+}
+
+.u-section-3 .u-text-3 {
+  margin: -56px 48px 0 auto;
+}
+
+.u-section-3 .u-text-4 {
+  line-height: 1.6;
+  margin: 20px 750px 0 0;
+}
+
+.u-section-3 .u-text-5 {
+  margin: -66px 365px 0 385px;
+}
+
+.u-section-3 .u-text-6 {
+  margin: -44px 0 0 750px;
+}
+
+.u-section-3 .u-container-layout-2 {
+  padding: 30px;
+}
+
+.u-section-3 .u-image-4 {
+  width: 330px;
+  height: 330px;
+  margin: 0 auto 0 0;
+}
+
+.u-section-3 .u-image-5 {
+  width: 330px;
+  height: 330px;
+  margin: -330px 0 0 auto;
+}
+
+.u-section-3 .u-image-6 {
+  width: 330px;
+  height: 330px;
+  margin: -330px auto 0;
+}
+
+.u-section-3 .u-text-7 {
+  margin: 20px auto 0 112px;
+}
+
+.u-section-3 .u-text-8 {
+  margin: -28px auto 0;
+}
+
+.u-section-3 .u-text-9 {
+  margin: -28px 121px 0 auto;
+}
+
+.u-section-3 .u-text-10 {
+  margin: 20px 750px 0 0;
+}
+
+.u-section-3 .u-text-11 {
+  width: 330px;
+  margin: -44px auto 0;
+}
+
+.u-section-3 .u-text-12 {
+  margin: -44px 0 0 750px;
+}
+
+.u-section-3 .u-container-layout-3 {
+  padding: 30px;
+}
+
+.u-section-3 .u-image-7 {
+  width: 330px;
+  height: 330px;
+  margin: 0 auto 0 0;
+}
+
+.u-section-3 .u-image-8 {
+  width: 330px;
+  height: 330px;
+  margin: -330px 0 0 auto;
+}
+
+.u-section-3 .u-image-9 {
+  width: 330px;
+  height: 330px;
+  margin: -330px auto 0;
+}
+
+.u-section-3 .u-text-13 {
+  margin: 20px auto 0 82px;
+}
+
+.u-section-3 .u-text-14 {
+  margin: -28px auto 0;
+}
+
+.u-section-3 .u-text-15 {
+  margin: -28px 40px 0 auto;
+}
+
+.u-section-3 .u-text-16 {
+  margin: 20px 750px 0 0;
+}
+
+.u-section-3 .u-text-17 {
+  width: 330px;
+  margin: -44px auto 0;
+}
+
+.u-section-3 .u-text-18 {
+  margin: -44px 0 0 750px;
+}
+
+.u-section-3 .u-container-layout-4 {
+  padding: 30px;
+}
+
+.u-section-3 .u-image-10 {
+  width: 330px;
+  height: 330px;
+  margin: 0 auto 0 0;
+}
+
+.u-section-3 .u-image-11 {
+  width: 330px;
+  height: 330px;
+  margin: -330px 0 0 auto;
+}
+
+.u-section-3 .u-image-12 {
+  width: 330px;
+  height: 330px;
+  margin: -330px auto 0;
+}
+
+.u-section-3 .u-text-19 {
+  margin: 20px auto 0 36px;
+}
+
+.u-section-3 .u-text-20 {
+  margin: -56px auto 0;
+}
+
+.u-section-3 .u-text-21 {
+  margin: -28px 62px 0 auto;
+}
+
+.u-section-3 .u-text-22 {
+  margin: 48px 750px 0 0;
+}
+
+.u-section-3 .u-text-23 {
+  width: 330px;
+  margin: -100px auto 0;
+}
+
+.u-section-3 .u-text-24 {
+  margin: -16px 0 0 750px;
 }
 
 .u-section-3 .u-group-1 {
   width: 570px;
   min-height: 152px;
-  margin: 50px auto 0 0;
+  height: auto;
+  margin: -833px auto 60px 0;
 }
 
-.u-section-3 .u-text-1 {
+.u-section-3 .u-text-25 {
   margin-left: 20px;
   margin-right: 20px;
   font-weight: 700;
 }
 
-.u-section-3 .u-text-2 {
+.u-section-3 .u-text-26 {
   margin-left: 20px;
   margin-right: 20px;
-}
-
-.u-section-3 .u-layout-wrap-1 {
-  margin: 49px auto 30px 0;
-}
-
-.u-section-3 .u-layout-cell-1 {
-  min-height: 515px;
-  background-image: none;
-}
-
-.u-section-3 .u-image-2 {
-  height: 345px;
-  margin: 0 auto 0 0;
-}
-
-.u-section-3 .u-text-3 {
-  font-weight: 700;
-  font-size: 1.5rem;
-  margin: 13px 101px 0 20px;
-}
-
-.u-section-3 .u-text-4 {
-  font-size: 0.875rem;
-  margin: 20px 20px 0;
-}
-
-.u-section-3 .u-layout-cell-2 {
-  background-image: none;
-  min-height: 515px;
-}
-
-.u-section-3 .u-image-3 {
-  height: 345px;
-  margin: 0 auto 0 0;
-}
-
-.u-section-3 .u-text-5 {
-  font-size: 1.5rem;
-  font-weight: 700;
-  margin: 13px 146px 0 20px;
-}
-
-.u-section-3 .u-text-6 {
-  font-size: 0.875rem;
-  margin: 20px;
-}
-
-.u-section-3 .u-layout-cell-3 {
-  background-image: none;
-  min-height: 515px;
-}
-
-.u-section-3 .u-image-4 {
-  height: 345px;
-  margin: 0 auto 0 0;
-}
-
-.u-section-3 .u-text-7 {
-  font-size: 1.5rem;
-  font-weight: 700;
-  margin: 13px 150px 0 20px;
-}
-
-.u-section-3 .u-text-8 {
-  font-size: 0.875rem;
-  margin: 20px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-3 .u-image-1 {
+  .u-section-3 {
+    background-position: 50% 50%;
+  }
+
+  .u-section-3 .u-tabs-1 {
     margin-left: initial;
   }
 
-  .u-section-3 .u-group-1 {
-    width: 470px;
+  .u-section-3 .u-image-1 {
+    margin-top: -98px;
   }
 
   .u-section-3 .u-text-1 {
-    margin-left: 16px;
-    margin-right: 16px;
-    position: relative;
-  }
-
-  .u-section-3 .u-text-2 {
-    margin-left: 16px;
-    margin-right: 16px;
-    position: relative;
-  }
-
-  .u-section-3 .u-layout-wrap-1 {
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-3 .u-image-2 {
-    margin-right: initial;
-    margin-left: initial;
+    margin-left: 39px;
   }
 
   .u-section-3 .u-text-3 {
-    margin-right: 54px;
-    margin-left: 16px;
+    margin-right: 39px;
   }
 
   .u-section-3 .u-text-4 {
-    margin-left: 16px;
-    margin-right: 16px;
-  }
-
-  .u-section-3 .u-image-3 {
-    margin-right: initial;
-    margin-left: initial;
+    margin-right: 550px;
   }
 
   .u-section-3 .u-text-5 {
-    margin-left: 16px;
-    margin-right: 16px;
+    width: 330px;
+    margin-right: 265px;
+    margin-left: 285px;
   }
 
   .u-section-3 .u-text-6 {
-    margin-left: 16px;
-    margin-right: 16px;
-  }
-
-  .u-section-3 .u-image-4 {
-    margin-right: initial;
-    margin-left: initial;
+    margin-left: 550px;
   }
 
   .u-section-3 .u-text-7 {
-    margin-left: 16px;
-    margin-right: 16px;
+    margin-left: 91px;
   }
 
-  .u-section-3 .u-text-8 {
-    margin-left: 16px;
-    margin-right: 16px;
+  .u-section-3 .u-text-9 {
+    margin-right: 99px;
+  }
+
+  .u-section-3 .u-text-10 {
+    margin-right: 550px;
+  }
+
+  .u-section-3 .u-text-12 {
+    margin-left: 550px;
+  }
+
+  .u-section-3 .u-text-13 {
+    margin-left: 66px;
+  }
+
+  .u-section-3 .u-text-15 {
+    margin-right: 32px;
+  }
+
+  .u-section-3 .u-text-16 {
+    margin-right: 550px;
+  }
+
+  .u-section-3 .u-text-18 {
+    margin-left: 550px;
+  }
+
+  .u-section-3 .u-text-19 {
+    margin-left: 29px;
+  }
+
+  .u-section-3 .u-text-21 {
+    margin-right: 51px;
+  }
+
+  .u-section-3 .u-text-22 {
+    margin-right: 550px;
+  }
+
+  .u-section-3 .u-text-24 {
+    margin-left: 550px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-3 .u-image-1 {
-    height: 365px;
-    margin-left: initial;
-  }
-
-  .u-section-3 .u-group-1 {
-    width: 360px;
-  }
-
   .u-section-3 .u-text-1 {
-    margin-left: 13px;
-    margin-right: 13px;
-  }
-
-  .u-section-3 .u-text-2 {
-    margin-left: 13px;
-    margin-right: 13px;
+    margin-left: 29px;
   }
 
   .u-section-3 .u-text-3 {
-    margin-right: 0;
-    margin-left: 12px;
+    margin-right: 29px;
   }
 
   .u-section-3 .u-text-4 {
-    margin-left: 13px;
-    margin-right: 13px;
+    margin-right: 330px;
   }
 
   .u-section-3 .u-text-5 {
-    margin-left: 12px;
-    margin-right: 12px;
+    margin-right: 155px;
+    margin-left: 175px;
   }
 
   .u-section-3 .u-text-6 {
-    margin-left: 13px;
-    margin-right: 13px;
+    margin-left: 330px;
   }
 
   .u-section-3 .u-text-7 {
-    margin-left: 12px;
-    margin-right: 12px;
+    margin-left: 68px;
   }
 
-  .u-section-3 .u-text-8 {
-    margin-left: 13px;
-    margin-right: 13px;
+  .u-section-3 .u-text-9 {
+    margin-right: 74px;
+  }
+
+  .u-section-3 .u-text-10 {
+    margin-right: 330px;
+  }
+
+  .u-section-3 .u-text-12 {
+    margin-left: 330px;
+  }
+
+  .u-section-3 .u-text-13 {
+    margin-left: 50px;
+  }
+
+  .u-section-3 .u-text-15 {
+    margin-right: 24px;
+  }
+
+  .u-section-3 .u-text-16 {
+    margin-right: 330px;
+  }
+
+  .u-section-3 .u-text-18 {
+    margin-left: 330px;
+  }
+
+  .u-section-3 .u-text-19 {
+    margin-left: 22px;
+  }
+
+  .u-section-3 .u-text-21 {
+    margin-right: 38px;
+  }
+
+  .u-section-3 .u-text-22 {
+    margin-right: 330px;
+  }
+
+  .u-section-3 .u-text-24 {
+    margin-left: 330px;
   }
 }
 
 @media (max-width: 767px) {
+  .u-section-3 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
   .u-section-3 .u-image-1 {
-    height: 349px;
-    margin-left: initial;
+    width: 260px;
+    height: 260px;
   }
 
-  .u-section-3 .u-sheet-1 {
-    min-height: 1059px;
-    margin-top: -349px;
-  }
-
-  .u-section-3 .u-group-1 {
-    width: 338px;
+  .u-section-3 .u-image-2 {
+    margin-top: -260px;
   }
 
   .u-section-3 .u-text-1 {
-    margin-left: 9px;
-    margin-right: 9px;
-  }
-
-  .u-section-3 .u-text-2 {
-    margin-left: 9px;
-    margin-right: 9px;
+    margin-top: -1px;
+    margin-left: 23px;
   }
 
   .u-section-3 .u-text-3 {
-    margin-left: 0;
+    margin-right: 23px;
   }
 
   .u-section-3 .u-text-4 {
-    margin-right: 18px;
-    margin-left: 0;
+    margin-right: 190px;
   }
 
   .u-section-3 .u-text-5 {
-    margin-right: auto;
-    margin-left: 0;
+    margin-right: 85px;
+    margin-left: 105px;
   }
 
   .u-section-3 .u-text-6 {
-    margin-right: 18px;
-    margin-left: 0;
+    margin-left: 190px;
+  }
+
+  .u-section-3 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-image-4 {
+    width: 260px;
+    height: 260px;
+  }
+
+  .u-section-3 .u-image-5 {
+    margin-top: -260px;
   }
 
   .u-section-3 .u-text-7 {
-    margin-right: auto;
-    margin-left: 0;
+    margin-left: 54px;
   }
 
-  .u-section-3 .u-text-8 {
-    margin-right: 18px;
-    margin-left: 0;
+  .u-section-3 .u-text-9 {
+    margin-right: 58px;
+  }
+
+  .u-section-3 .u-text-10 {
+    margin-right: 190px;
+  }
+
+  .u-section-3 .u-text-12 {
+    margin-left: 190px;
+  }
+
+  .u-section-3 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-image-7 {
+    width: 260px;
+    height: 260px;
+  }
+
+  .u-section-3 .u-image-8 {
+    margin-top: -260px;
+  }
+
+  .u-section-3 .u-text-13 {
+    margin-left: 39px;
+  }
+
+  .u-section-3 .u-text-15 {
+    margin-right: 19px;
+  }
+
+  .u-section-3 .u-text-16 {
+    margin-right: 190px;
+  }
+
+  .u-section-3 .u-text-18 {
+    margin-left: 190px;
+  }
+
+  .u-section-3 .u-container-layout-4 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-3 .u-image-10 {
+    width: 260px;
+    height: 260px;
+  }
+
+  .u-section-3 .u-image-11 {
+    margin-top: -260px;
+  }
+
+  .u-section-3 .u-text-19 {
+    margin-left: 17px;
+  }
+
+  .u-section-3 .u-text-21 {
+    margin-right: 30px;
+  }
+
+  .u-section-3 .u-text-22 {
+    margin-right: 190px;
+  }
+
+  .u-section-3 .u-text-24 {
+    margin-left: 190px;
+  }
+
+  .u-section-3 .u-group-1 {
+    width: 540px;
+  }
+
+  .u-section-3 .u-text-25 {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
+  .u-section-3 .u-text-26 {
+    margin-left: 5px;
+    margin-right: 5px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-3 .u-image-1 {
-    height: 343px;
-    margin-left: initial;
+    width: 160px;
+    height: 160px;
+    margin-top: 0;
   }
 
-  .u-section-3 .u-sheet-1 {
-    margin-top: -343px;
+  .u-section-3 .u-image-2 {
+    width: 320px;
+    height: 320px;
+    margin-top: -160px;
   }
 
-  .u-section-3 .u-group-1 {
-    width: 283px;
+  .u-section-3 .u-image-3 {
+    width: 320px;
+    height: 320px;
+    margin-top: -320px;
   }
 
   .u-section-3 .u-text-1 {
-    margin-left: 6px;
-    margin-right: 6px;
+    margin-top: 20px;
+    margin-left: 14px;
   }
 
-  .u-section-3 .u-text-2 {
-    margin-left: 6px;
-    margin-right: 6px;
+  .u-section-3 .u-text-3 {
+    margin-right: 14px;
   }
 
   .u-section-3 .u-text-4 {
-    margin-left: 6px;
-    margin-right: 6px;
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-text-5 {
+    width: 320px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-3 .u-text-6 {
-    margin-left: 6px;
-    margin-right: 6px;
+    margin-left: 0;
   }
 
-  .u-section-3 .u-text-8 {
-    margin-left: 6px;
-    margin-right: 6px;
+  .u-section-3 .u-image-4 {
+    width: 160px;
+    height: 160px;
+  }
+
+  .u-section-3 .u-image-5 {
+    width: 320px;
+    height: 320px;
+    margin-top: -160px;
+  }
+
+  .u-section-3 .u-image-6 {
+    width: 320px;
+    height: 320px;
+    margin-top: -320px;
+  }
+
+  .u-section-3 .u-text-7 {
+    margin-left: 33px;
+  }
+
+  .u-section-3 .u-text-9 {
+    margin-right: 36px;
+  }
+
+  .u-section-3 .u-text-10 {
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-text-11 {
+    width: 320px;
+  }
+
+  .u-section-3 .u-text-12 {
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-image-7 {
+    width: 160px;
+    height: 160px;
+  }
+
+  .u-section-3 .u-image-8 {
+    width: 320px;
+    height: 320px;
+    margin-top: -160px;
+  }
+
+  .u-section-3 .u-image-9 {
+    width: 320px;
+    height: 320px;
+    margin-top: -320px;
+  }
+
+  .u-section-3 .u-text-13 {
+    margin-left: 24px;
+  }
+
+  .u-section-3 .u-text-15 {
+    margin-right: 12px;
+  }
+
+  .u-section-3 .u-text-16 {
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-text-17 {
+    width: 320px;
+  }
+
+  .u-section-3 .u-text-18 {
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-image-10 {
+    width: 160px;
+    height: 160px;
+  }
+
+  .u-section-3 .u-image-11 {
+    width: 320px;
+    height: 320px;
+    margin-top: -160px;
+  }
+
+  .u-section-3 .u-image-12 {
+    width: 320px;
+    height: 320px;
+    margin-top: -320px;
+  }
+
+  .u-section-3 .u-text-19 {
+    margin-left: 10px;
+  }
+
+  .u-section-3 .u-text-21 {
+    margin-right: 18px;
+  }
+
+  .u-section-3 .u-text-22 {
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-text-23 {
+    width: 320px;
+  }
+
+  .u-section-3 .u-text-24 {
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-group-1 {
+    width: 340px;
+  }
+
+  .u-section-3 .u-text-25 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-text-26 {
+    margin-left: 0;
+    margin-right: 0;
   }
 }.u-section-4 {
   background-image: none;
 }
 
 .u-section-4 .u-sheet-1 {
-  min-height: 677px;
+  min-height: 723px;
 }
 
 .u-section-4 .u-group-1 {
@@ -690,7 +1058,7 @@
 }
 
 .u-section-4 .u-layout-wrap-1 {
-  margin: 10px auto 59px 0;
+  margin: 10px auto 43px 0;
 }
 
 .u-section-4 .u-image-1 {
@@ -953,6 +1321,10 @@
 }
 
 @media (max-width: 1199px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 278px;
+  }
+
   .u-section-4 .u-group-1 {
     width: 470px;
   }
@@ -1045,7 +1417,7 @@
 
 @media (max-width: 991px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 1122px;
+    min-height: 678px;
   }
 
   .u-section-4 .u-group-1 {
@@ -1131,7 +1503,6 @@
   .u-section-4 .u-group-1 {
     width: 338px;
     min-height: 174px;
-    margin-top: 33px;
     margin-left: auto;
   }
 
@@ -1147,7 +1518,8 @@
 
   .u-section-4 .u-layout-wrap-1 {
     width: 262px;
-    margin: 30px auto 49px 139px;
+    margin-right: auto;
+    margin-left: 139px;
   }
 
   .u-section-4 .u-container-layout-3 {
@@ -1317,7 +1689,6 @@
   }
 }.u-section-5 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../images/2ab06c7a94c3125deb4b9084c6f6ca19.jpeg");
-  background-position: 50% 50%;
 }
 
 .u-section-5 .u-sheet-1 {
@@ -1414,6 +1785,10 @@
 }
 
 @media (max-width: 1199px) {
+  .u-section-5 {
+    background-position: 50% 50%;
+  }
+
   .u-section-5 .u-layout-wrap-1 {
     width: 881px;
     margin-left: 30px;
