--- a/AZSChool/AZSchool.WEB/wwwroot/css/MainPage.css
+++ b/AZSChool/AZSchool.WEB/wwwroot/css/MainPage.css
@@ -1,5 +1,5 @@
 .u-section-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("../images/-2.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("../Images/-2.jpg");
 }
 
 .u-section-1 .u-sheet-1 {
@@ -331,7 +331,7 @@
     margin-right: 9px;
   }
 }.u-section-3 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url("../images/3b91742c7e026b49e43d4d9e3bc6edf4.jpeg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url("../Images/3b91742c7e026b49e43d4d9e3bc6edf4.jpeg");
 }
 
 .u-section-3 .u-sheet-1 {
@@ -1062,7 +1062,7 @@
 }
 
 .u-section-4 .u-image-1 {
-  background-image: url("../images/9503e21cb9ae70afe48da4cb3fad9786.jpeg");
+  background-image: url("../Images/9503e21cb9ae70afe48da4cb3fad9786.jpeg");
   min-height: 238px;
   background-position: 50% 42.31%;
 }
@@ -1126,7 +1126,7 @@
 }
 
 .u-section-4 .u-image-2 {
-  background-image: url("../images/b13c6e9f59e0ab70090f39ba18b05cc8.png");
+  background-image: url("../Images/b13c6e9f59e0ab70090f39ba18b05cc8.png");
   min-height: 238px;
   background-position: 50% 50%;
 }
@@ -1191,7 +1191,7 @@
 }
 
 .u-section-4 .u-image-3 {
-  background-image: url("../images/8ceab0402343f411b3366b2b411b8c81.png");
+  background-image: url("../Images/8ceab0402343f411b3366b2b411b8c81.png");
   min-height: 207px;
   background-position: 50% 50%;
 }
@@ -1256,7 +1256,7 @@
 }
 
 .u-section-4 .u-image-4 {
-  background-image: url("../images/2c8c55f150cf4e6371bbf2b655f7a95e.png");
+  background-image: url("../Images/2c8c55f150cf4e6371bbf2b655f7a95e.png");
   min-height: 207px;
   background-position: 50% 50%;
 }
@@ -1688,7 +1688,7 @@
     margin-right: 6px;
   }
 }.u-section-5 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../images/2ab06c7a94c3125deb4b9084c6f6ca19.jpeg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../Images/2ab06c7a94c3125deb4b9084c6f6ca19.jpeg");
 }
 
 .u-section-5 .u-sheet-1 {
@@ -1948,7 +1948,7 @@
 }
 
 .u-section-6 .u-image-1 {
-  background-image: url("../images/6f7e0c7ddbf77837b886129cde31f441.jpeg");
+  background-image: url("../Images/6f7e0c7ddbf77837b886129cde31f441.jpeg");
   min-height: 199px;
   background-position: 50% 50%;
 }
@@ -1988,13 +1988,13 @@
 }
 
 .u-section-6 .u-image-2 {
-  background-image: url("../images/37ec3fe2c76827120d57d30534f3e974.jpeg");
+  background-image: url("../Images/37ec3fe2c76827120d57d30534f3e974.jpeg");
   min-height: 316px;
   background-position: 50% 50%;
 }
 
 .u-section-6 .u-image-3 {
-  background-image: url("../images/514def4ff7d179aefd43f99a639d048c.jpeg");
+  background-image: url("../Images/514def4ff7d179aefd43f99a639d048c.jpeg");
   min-height: 215px;
   background-position: 50% 50%;
 }
