--- a/AZSChool/AZSchool.WEB/Views/Home/Index.cshtml
+++ b/AZSChool/AZSchool.WEB/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
 <body class="u-body">
     <header class="u-clearfix u-header u-header" id="sec-e20f">
         <div class="u-clearfix u-sheet u-sheet-1">
-            <img src="images/photo_2021-02-10_14-38-33.jpg" alt="" class="u-align-left u-image u-image-default u-image-1" data-image-width="300" data-image-height="70">
+            <img src="~/images/photo_2021-02-10_14-38-33.jpg" alt="" class="u-align-left u-image u-image-default u-image-1" data-image-width="300" data-image-height="70">
             <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
                 <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; text-transform: uppercase;">
                     <a class="u-button-style u-custom-active-border-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
