--- a/AZSChool/AZSchool.WEB/Views/Home/Index.cshtml
+++ b/AZSChool/AZSchool.WEB/Views/Home/Index.cshtml
@@ -48,13 +48,19 @@
                 <div class="u-custom-menu u-nav-container">
                     <ul class="u-nav u-spacing-30 u-unstyled u-nav-1">
                         <li class="u-nav-item">
-                            <a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="Страница-1.html" style="padding: 10px 0px;">MainPage</a>
+                            <a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="#sec-e20f" style="padding: 10px 0px;">Главная</a>
                         </li>
                         <li class="u-nav-item">
-                            <a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" style="padding: 10px 0px;">Страница 2</a>
+                            <a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="#sec-16e6" style="padding: 10px 0px;">Наши программы</a>
                         </li>
                         <li class="u-nav-item">
-                            <a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" style="padding: 10px 0px;">Страница 3</a>
+                            <a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="#sec-abc0" style="padding: 10px 0px;">Наши преподаватели</a>
+                        </li>
+                        <li class="u-nav-item">
+                            <a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="#sec-80d0" style="padding: 10px 0px;">Новости</a>
+                        </li>
+                        <li class="u-nav-item">
+                            <a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="../Home/Login" style="padding: 10px 0px;">Вход</a>
                         </li>
                     </ul>
                 </div>
@@ -64,13 +70,19 @@
                             <div class="u-menu-close"></div>
                             <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2">
                                 <li class="u-nav-item">
-                                    <a class="u-button-style u-nav-link" href="Страница-1.html" style="padding: 10px 0px;">MainPage</a>
+                                    <a class="u-button-style u-nav-link" href="#sec-e20f" style="padding: 10px 0px;">Главная</a>
                                 </li>
                                 <li class="u-nav-item">
-                                    <a class="u-button-style u-nav-link" style="padding: 10px 0px;">Страница 2</a>
+                                    <a class="u-button-style u-nav-link" href="#sec-16e6" style="padding: 10px 0px;">Наши программы</a>
                                 </li>
                                 <li class="u-nav-item">
-                                    <a class="u-button-style u-nav-link" style="padding: 10px 0px;">Страница 3</a>
+                                    <a class="u-button-style u-nav-link" href="#sec-abc0" style="padding: 10px 0px;">Наши преподаватели</a>
+                                </li>
+                                <li class="u-nav-item">
+                                    <a class="u-button-style u-nav-link" href="#sec-80d0" style="padding: 10px 0px;">Новости</a>
+                                </li>
+                                <li class="u-nav-item">
+                                    <a class="u-button-style u-nav-link" href="../Home/Login" style="padding: 10px 0px;">Вход</a>
                                 </li>
                             </ul>
                         </div>
@@ -217,9 +229,9 @@
                             <h6 class="u-align-center u-text u-text-default u-text-21">
                                 Строительные и&nbsp;<br>отделочные работы
                             </h6>
-                            <p class="u-text u-text-22">Научитесь основам конструирования и дизайна одежды и обуви.</p>
-                            <p class="u-text u-text-23">Графический дизайн, визуальный дизайн и дизайн интерьера.</p>
-                            <p class="u-text u-text-24">Инструменты и способы проведения строительных и монтажных работ.</p>
+                            <p class="u-text u-text-22" style="width: 330px; margin: 20px 0px 20px 0px;">Научитесь основам конструирования и дизайна одежды и обуви.</p>
+                            <p class="u-text u-text-23" style="width: 330px; margin: -65px 0px 20px 350px;">Графический дизайн, визуальный дизайн и дизайн интерьера.</p>
+                            <p class="u-text u-text-24" style="width: 330px; margin: -65px 0px 20px 800px;">Инструменты и способы проведения строительных и монтажных работ.</p>
                         </div>
                     </div>
                 </div>
@@ -236,7 +248,7 @@
         <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
             <div class="u-align-center-sm u-container-style u-group u-group-1">
                 <div class="u-container-layout u-container-layout-1">
-                    <h2 class="u-custom-font u-font-oswald u-text u-text-1">Our Teachers</h2>
+                    <h2 class="u-custom-font u-font-oswald u-text u-text-1">Наши Преподаватели</h2>
                     <p class="u-text u-text-2">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
                 </div>
             </div>
@@ -402,7 +414,7 @@
         <div class="u-clearfix u-sheet u-sheet-1">
             <div class="u-container-style u-group u-group-1">
                 <div class="u-container-layout u-valign-middle">
-                    <h2 class="u-custom-font u-font-oswald u-text u-text-1">Our Blog</h2>
+                    <h2 class="u-custom-font u-font-oswald u-text u-text-1">Новости</h2>
                     <p class="u-text u-text-2">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
                 </div>
             </div>
@@ -502,18 +514,5 @@
         </div>
     </section>
 
-
-
-    <section class="u-backlink u-clearfix u-grey-80">
-        <a class="u-link" href="https://nicepage.com/website-mockup" target="_blank">
-            <span>Website Mockup</span>
-        </a>
-        <p class="u-text">
-            <span>created with</span>
-        </p>
-        <a class="u-link" href="https://nicepage.com/" target="_blank">
-            <span>Offline Website Builder Software</span>
-        </a>.
-    </section>
 </body>
 </html>
