--- a/AZSChool/AZSchool.WEB/Views/Home/Index.cshtml
+++ b/AZSChool/AZSchool.WEB/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     <meta name="keywords" content="In our Campus you can, Our Courses, Our Teachers, John Mcallister, Jane Doe, Mary Mgrayan, Hanna Kim, 44, +10 K, +47, 15, Our Blog, Our university, Course Registration">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>MainPage</title>
+    <title>AZSchool</title>
     <link rel="stylesheet" href="~/css/nicepage.css" media="screen">
     <link rel="stylesheet" href="~/css/MainPage.css" media="screen">
     <script class="u-script" type="text/javascript" src="~/js/jquery.js" defer=""></script>
@@ -20,16 +20,16 @@
 
 
 
-    <meta property="og:title" content="MainPage">
+    <meta property="og:title" content="AZSchool">
     <meta property="og:type" content="website">
     <meta name="theme-color" content="#73a3de">
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
 </head>
 <body class="u-body">
-    <header class="u-clearfix u-header u-header" id="sec-e20f">
+    <header class="u-clearfix u-sticky u-header u-header" id="sec-e20f" style="background-color:white">
         <div class="u-clearfix u-sheet u-sheet-1">
-            <img src="~/Images/photo_2021-02-10_14-38-33.jpg" alt="" class="u-align-left u-image u-image-default u-image-1" data-image-width="300" data-image-height="70">
+            <img src="~/images/photo_2021-02-10_14-38-33.jpg" alt="" class="u-align-left u-image u-image-default u-image-1" data-image-width="300" data-image-height="70">
             <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
                 <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; text-transform: uppercase;">
                     <a class="u-button-style u-custom-active-border-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
@@ -176,9 +176,9 @@
                 <div class="u-tab-content">
                     <div class="u-container-style u-tab-active u-tab-pane" id="tab-f2d5" role="tabpanel" aria-labelledby="link-tab-f2d5">
                         <div class="u-container-layout u-container-layout-1">
-                            <img src="~/Images/9d78815b65758b736576b28f8b3bc8232b8896e2393971e13d531c84f78e21bb8f54ee050ee3ac7f33cd83277668dd3658cf6ab5cbea2e028c91f0_1280.jpg" alt="" class="u-image u-image-default u-image-1" data-image-width="1280" data-image-height="853">
-                            <img src="~/Images/f59212d5cf53ad5176cb05b53a3476548b27fb0d5ae6676e3fd131724f071e7fa4f7d87665d652e57e86795d3cfdf87db090cd69ded8fc1a157f96_1280.jpg" alt="" class="u-image u-image-default u-image-2" data-image-width="1280" data-image-height="854">
-                            <img src="~/Images/d11da39ad327739b263b47e25bd048a9bccc3af82a4fcf00374567c1198996ebdc6c74268c4195e5f0dfd09c80c23bcccefed8fa4284d530351ef4_1280.jpg" alt="" class="u-image u-image-default u-image-3" data-image-width="1280" data-image-height="853">
+                            <img src="~/images/9d78815b65758b736576b28f8b3bc8232b8896e2393971e13d531c84f78e21bb8f54ee050ee3ac7f33cd83277668dd3658cf6ab5cbea2e028c91f0_1280.jpg" alt="" class="u-image u-image-default u-image-1" data-image-width="1280" data-image-height="853">
+                            <img src="~/images/f59212d5cf53ad5176cb05b53a3476548b27fb0d5ae6676e3fd131724f071e7fa4f7d87665d652e57e86795d3cfdf87db090cd69ded8fc1a157f96_1280.jpg" alt="" class="u-image u-image-default u-image-2" data-image-width="1280" data-image-height="854">
+                            <img src="~/images/d11da39ad327739b263b47e25bd048a9bccc3af82a4fcf00374567c1198996ebdc6c74268c4195e5f0dfd09c80c23bcccefed8fa4284d530351ef4_1280.jpg" alt="" class="u-image u-image-default u-image-3" data-image-width="1280" data-image-height="853">
                             <h6 class="u-text u-text-default u-text-1">Веб программирование</h6>
                             <h6 class="u-align-center u-text u-text-default u-text-2">
                                 Программирование&nbsp;<br>микроконтроллеров
@@ -193,9 +193,9 @@
                     </div>
                     <div class="u-container-style u-tab-pane" id="tab-2e44" role="tabpanel" aria-labelledby="link-tab-2e44">
                         <div class="u-container-layout u-container-layout-2">
-                            <img src="~/Images/07cd8a174c2af5c13eabc34e5fb960d37374f29bd0b592f2f765de512af14bbaee3e03d64e9f208e37a702d785a850f83b8198f32f42076c05731c_1280.jpg" alt="" class="u-image u-image-default u-image-4" data-image-width="150" data-image-height="99">
-                            <img src="~/Images/bc3a6bbf9e58a6b0d80233ab755ecd2b5c0f21ebb8150487b0943fe63502a05355436e8154eea91cdf4f2fa8419da25604a552a188b4e4dd71a2ab_1280.jpg" alt="" class="u-image u-image-default u-image-5" data-image-width="1280" data-image-height="853">
-                            <img src="~/Images/ea4508bbe1cd1071950b32a1337a1a47d3fbcfc65e41423745b2020a3454dd6472ddafd334736557d3262ee24e06f912fe4e23dc18548c08469888_1280.jpg" alt="" class="u-image u-image-default u-image-6" data-image-width="150" data-image-height="99">
+                            <img src="~/images/07cd8a174c2af5c13eabc34e5fb960d37374f29bd0b592f2f765de512af14bbaee3e03d64e9f208e37a702d785a850f83b8198f32f42076c05731c_1280.jpg" alt="" class="u-image u-image-default u-image-4" data-image-width="150" data-image-height="99">
+                            <img src="~/images/bc3a6bbf9e58a6b0d80233ab755ecd2b5c0f21ebb8150487b0943fe63502a05355436e8154eea91cdf4f2fa8419da25604a552a188b4e4dd71a2ab_1280.jpg" alt="" class="u-image u-image-default u-image-5" data-image-width="1280" data-image-height="853">
+                            <img src="~/images/ea4508bbe1cd1071950b32a1337a1a47d3fbcfc65e41423745b2020a3454dd6472ddafd334736557d3262ee24e06f912fe4e23dc18548c08469888_1280.jpg" alt="" class="u-image u-image-default u-image-6" data-image-width="150" data-image-height="99">
                             <h6 class="u-text u-text-default u-text-7">Маркетинг</h6>
                             <h6 class="u-text u-text-default u-text-8">Основы продвижения</h6>
                             <h6 class="u-text u-text-default u-text-9">Реклама</h6>
@@ -206,9 +206,9 @@
                     </div>
                     <div class="u-container-style u-tab-pane" id="tab-3237" role="tabpanel" aria-labelledby="link-tab-3237">
                         <div class="u-container-layout u-container-layout-3">
-                            <img src="~/Images/08375d96983b307a90a718638c7553763bb2ff2d2bd1073d9f7fa978acb4e41211d9e88bce80cb166f3e43fb87a26500f7cf1bbcf912b31705be61_1280.jpg" alt="" class="u-image u-image-default u-image-7" data-image-width="1280" data-image-height="853">
-                            <img src="~/Images/9c5d0f1a822db684d61e75e766ecda5d5c973f3c5d39d24e09591f390755071be5fc607481af6173c8bb74c3333a59cfbbbca9ebbb1a98f373a764_1280.jpg" alt="" class="u-image u-image-default u-image-8" data-image-width="1280" data-image-height="728">
-                            <img src="~/Images/832ae5f411b3a5b8e7675afe28a41cfd71a49dd4cd8089614f3ab4189b990cf1fce5e5dd4101d5e37a8c12845db4ca160d37932e0dfc4f5eabde47_1280.jpg" alt="" class="u-image u-image-default u-image-9" data-image-width="1280" data-image-height="987">
+                            <img src="~/images/08375d96983b307a90a718638c7553763bb2ff2d2bd1073d9f7fa978acb4e41211d9e88bce80cb166f3e43fb87a26500f7cf1bbcf912b31705be61_1280.jpg" alt="" class="u-image u-image-default u-image-7" data-image-width="1280" data-image-height="853">
+                            <img src="~/images/9c5d0f1a822db684d61e75e766ecda5d5c973f3c5d39d24e09591f390755071be5fc607481af6173c8bb74c3333a59cfbbbca9ebbb1a98f373a764_1280.jpg" alt="" class="u-image u-image-default u-image-8" data-image-width="1280" data-image-height="728">
+                            <img src="~/images/832ae5f411b3a5b8e7675afe28a41cfd71a49dd4cd8089614f3ab4189b990cf1fce5e5dd4101d5e37a8c12845db4ca160d37932e0dfc4f5eabde47_1280.jpg" alt="" class="u-image u-image-default u-image-9" data-image-width="1280" data-image-height="987">
                             <h6 class="u-text u-text-default u-text-13">Юриспруденция</h6>
                             <h6 class="u-text u-text-default u-text-14">Иностранные языки</h6>
                             <h6 class="u-text u-text-default u-text-15">Основы гос. управления</h6>
@@ -219,9 +219,9 @@
                     </div>
                     <div class="u-container-style u-tab-pane" id="tab-adf0" role="tabpanel" aria-labelledby="link-tab-adf0">
                         <div class="u-container-layout u-container-layout-4">
-                            <img src="~/Images/bf213b9c42560e50e60d01d15852206adea7d2a217ea4de803e33dbec1d5f2878961bff7c239f5305100b707facf99e7de63066c65e52f5e3ea202_1280.jpg" alt="" class="u-image u-image-default u-image-10" data-image-width="1280" data-image-height="853">
-                            <img src="~/Images/31777ac8933864cbb2afd46ea6b36af628ed54b8505aa60e8ea8630fc364d6b7b3fd88e7f5de3a6a682902262f21188599a1f6305efffa067c8da3_1280.jpg" alt="" class="u-image u-image-default u-image-11" data-image-width="1280" data-image-height="852">
-                            <img src="~/Images/ed2877914335885dd2d54ba856fdee5bc23e79b8eb74daeda7f46d0f0d64c857a65633473882925fcc9850e825b068a92df50f09aff11690dfce5f_1280.jpg" alt="" class="u-image u-image-default u-image-12" data-image-width="1280" data-image-height="853">
+                            <img src="~/images/bf213b9c42560e50e60d01d15852206adea7d2a217ea4de803e33dbec1d5f2878961bff7c239f5305100b707facf99e7de63066c65e52f5e3ea202_1280.jpg" alt="" class="u-image u-image-default u-image-10" data-image-width="1280" data-image-height="853">
+                            <img src="~/images/31777ac8933864cbb2afd46ea6b36af628ed54b8505aa60e8ea8630fc364d6b7b3fd88e7f5de3a6a682902262f21188599a1f6305efffa067c8da3_1280.jpg" alt="" class="u-image u-image-default u-image-11" data-image-width="1280" data-image-height="852">
+                            <img src="~/images/ed2877914335885dd2d54ba856fdee5bc23e79b8eb74daeda7f46d0f0d64c857a65633473882925fcc9850e825b068a92df50f09aff11690dfce5f_1280.jpg" alt="" class="u-image u-image-default u-image-12" data-image-width="1280" data-image-height="853">
                             <h6 class="u-align-center u-text u-text-default u-text-19">
                                 Шитье, конструирование&nbsp;<br>одежды, обуви
                             </h6>
@@ -485,27 +485,27 @@
                     <div class="u-layout-row">
                         <div class="u-align-center-md u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-left-cell u-size-12 u-size-60-md u-layout-cell-1">
                             <div class="u-container-layout u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-1">
-                                <img src="~/Images/fd088fa9e04993bca1d7288f0c7b9ddd.png" alt="" class="u-image u-image-default u-image-1" data-image-width="400" data-image-height="122">
+                                <img src="~/images/fd088fa9e04993bca1d7288f0c7b9ddd.png" alt="" class="u-image u-image-default u-image-1" data-image-width="400" data-image-height="122">
                             </div>
                         </div>
                         <div class="u-align-center-md u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-size-12 u-size-60-md u-layout-cell-2">
                             <div class="u-container-layout u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-2">
-                                <img src="~/Images/c8c5e25932eaa58b7812abf7bb2960f5.png" alt="" class="u-image u-image-default u-image-2">
+                                <img src="~/images/c8c5e25932eaa58b7812abf7bb2960f5.png" alt="" class="u-image u-image-default u-image-2">
                             </div>
                         </div>
                         <div class="u-align-center-md u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-size-12 u-size-60-md u-layout-cell-3">
                             <div class="u-container-layout u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-3">
-                                <img src="~/Images/11169ee3439dd229c3d68b877516e1a0.png" alt="" class="u-image u-image-default u-image-3">
+                                <img src="~/images/11169ee3439dd229c3d68b877516e1a0.png" alt="" class="u-image u-image-default u-image-3">
                             </div>
                         </div>
                         <div class="u-align-center-md u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-size-12 u-size-60-md u-layout-cell-4">
                             <div class="u-container-layout u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-4">
-                                <img src="~/Images/9b534f8d3c73950344420c862b51589b.png" alt="" class="u-image u-image-default u-image-4">
+                                <img src="~/images/9b534f8d3c73950344420c862b51589b.png" alt="" class="u-image u-image-default u-image-4">
                             </div>
                         </div>
                         <div class="u-align-center-sm u-align-center-xs u-container-style u-hidden-md u-layout-cell u-right-cell u-size-12 u-size-60-md u-layout-cell-5">
                             <div class="u-container-layout u-valign-middle-sm u-valign-middle-xs u-container-layout-5">
-                                <img src="~/Images/3425b4f540706edc83ab86a3032b1047.png" alt="" class="u-image u-image-default u-image-5">
+                                <img src="~/images/3425b4f540706edc83ab86a3032b1047.png" alt="" class="u-image u-image-default u-image-5">
                             </div>
                         </div>
                     </div>
