--- a/AZSChool/AZSchool.WEB/Views/Home/Teacher_InProgress.cshtml
+++ b/AZSChool/AZSchool.WEB/Views/Home/Teacher_InProgress.cshtml
@@ -10,7 +10,7 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Student_InProgress</title>
+    <title>Teacher in progress</title>
     <link rel="stylesheet" href="~/css/nicepage.css" media="screen">
     <link rel="stylesheet" href="~/css/Student_InProgress.css" media="screen">
     <script class="u-script" type="text/javascript" src="~/js/jquery.js" defer=""></script>
@@ -41,13 +41,7 @@
                 <div class="u-custom-menu u-nav-container">
                     <ul class="u-custom-font u-nav u-spacing-30 u-text-font u-unstyled u-nav-1">
                         <li class="u-nav-item">
-                            <a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="#" style="padding: 10px 0px;">Бесплатные курсы</a>
-                        </li>
-                        <li class="u-nav-item">
-                            <a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="#" style="padding: 10px 0px;">Популярное</a>
-                        </li>
-                        <li class="u-nav-item">
-                            <a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" style="padding: 10px 0px;">Студент</a><div class="u-nav-popup">
+                            <a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" style="padding: 10px 0px;">Преподаватель</a><div class="u-nav-popup">
                                 <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-2">
                                     <li class="u-nav-item">
                                         <a class="u-button-style u-nav-link">Профиль</a>
@@ -69,13 +63,7 @@
                             <div class="u-menu-close"></div>
                             <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3">
                                 <li class="u-nav-item">
-                                    <a class="u-button-style u-nav-link" href="#" style="padding: 10px 0px;">Бесплатные курсы</a>
-                                </li>
-                                <li class="u-nav-item">
-                                    <a class="u-button-style u-nav-link" href="#" style="padding: 10px 0px;">Популярное</a>
-                                </li>
-                                <li class="u-nav-item">
-                                    <a class="u-button-style u-nav-link" style="padding: 10px 0px;">Студент</a><div class="u-nav-popup">
+                                    <a class="u-button-style u-nav-link" style="padding: 10px 0px;">Преподаватель</a><div class="u-nav-popup">
                                         <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-4">
                                             <li class="u-nav-item">
                                                 <a class="u-button-style u-nav-link">Профиль</a>
@@ -102,13 +90,13 @@
             <div class="u-expanded-width u-tabs u-tabs-1" style=" margin: 40px 0px 0px 0px;">
                 <ul class="u-tab-list u-unstyled">
                     <li class="u-tab-item" style="margin: 0px 10px;">
-                        <a class=" u-border-3 u-border-active-grey-75 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style " href="../Home/Student">Главная</a>
+                        <a class=" u-border-3 u-border-active-grey-75 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style " href="../Home/Teacher">Мои курсы</a>
                     </li>
                     <li class="u-tab-item" style="margin: 0px 10px;">
-                        <a class="active u-border-3 u-border-active-grey-75 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style " href="../Home/Student_InProgress">В процессе</a>
+                        <a class="active u-border-3 u-border-active-grey-75 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style " href="../Home/Teacher_InProgress">Непроверенные курсы</a>
                     </li>
                     <li class="u-tab-item" style="margin: 0px 10px;">
-                        <a class="u-border-3 u-border-active-grey-75 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style " href="../Home/Student_Done">Пройденные</a>
+                        <a class=" u-border-3 u-border-active-grey-75 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style " href="../Home/Teacher_Done">Завершенные</a>
                     </li>
                 </ul>
             </div>
@@ -116,33 +104,38 @@
     </section>
     <section class="u-align-left u-clearfix u-grey-10 u-section-2" id="sec-3238">
         <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+            <h2 class="u-text u-text-1">Непроверенные</h2>
             <!--blog--><!--blog_options_json--><!--{"type":"Recent","source":"","tags":"","count":2}--><!--/blog_options_json-->
             <div class="u-blog u-expanded-width u-repeater u-repeater-1">
                 <!--blog_post-->
                 <div class="u-align-left u-blog-post u-container-style u-repeater-item u-white u-repeater-item-1">
                     <div class="u-container-layout u-similar-container u-container-layout-1">
-                        <a class="u-post-header-link" href="#">
+                        <a class="u-post-header-link" href="blog/пост.html">
                             <!--blog_post_image-->
                             <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="~/images/1.jpeg"><!--/blog_post_image-->
                         </a><!--blog_post_header-->
                         <h4 class="u-blog-control u-text u-text-1">
-                            <a class="u-post-header-link" href="#"><!--blog_post_header_content-->Заголовок 1-го поста<!--/blog_post_header_content--></a>
+                            <a class="u-post-header-link" href="blog/пост.html"><!--blog_post_header_content-->Название курса<!--/blog_post_header_content--></a><br />
+                            <a class="u-post-header-link" href="blog/пост.html"><!--blog_post_header_content-->Студент: Коля Вася<!--/blog_post_header_content--></a><br />
+                            <a class="u-post-header-link" href="blog/пост.html"><!--blog_post_header_content-->Поток: 3<!--/blog_post_header_content--></a><br />
                         </h4><!--/blog_post_header--><!--blog_post_content-->
-                        <div class="u-blog-control u-post-content u-text u-text-2"><!--blog_post_content_content-->Пример короткого текста. Lorem ipsum dolor sit amet.<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
-                        <a href="#" class="u-blog-control u-btn u-button-style u-btn-1"><!--blog_post_readmore_content-->Читать далее<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
+                        <div class="u-blog-control u-post-content u-text u-text-2"><!--blog_post_content_content-->Описание задания<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
+                        <a href="blog/пост.html" class="u-blog-control u-btn u-button-style u-btn-1"><!--blog_post_readmore_content-->Перейти<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
                     </div>
                 </div><!--/blog_post--><!--blog_post-->
                 <div class="u-align-left u-blog-post u-container-style u-repeater-item u-white u-repeater-item-2">
-                    <div class="u-container-layout u-similar-container u-container-layout-2">
-                        <a class="u-post-header-link" href="blog/пост-1.html">
+                    <div class="u-container-layout u-similar-container u-container-layout-1">
+                        <a class="u-post-header-link" href="blog/пост.html">
                             <!--blog_post_image-->
-                            <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-2" src="~/images/2.jpeg"><!--/blog_post_image-->
+                            <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="~/images/1.jpeg"><!--/blog_post_image-->
                         </a><!--blog_post_header-->
-                        <h4 class="u-blog-control u-text u-text-3">
-                            <a class="u-post-header-link" href="blog/пост-1.html"><!--blog_post_header_content-->Заголовок 2-го поста<!--/blog_post_header_content--></a>
+                        <h4 class="u-blog-control u-text u-text-1">
+                            <a class="u-post-header-link" href="blog/пост.html"><!--blog_post_header_content-->Название курса<!--/blog_post_header_content--></a><br />
+                            <a class="u-post-header-link" href="blog/пост.html"><!--blog_post_header_content-->Студент: Коля Вася<!--/blog_post_header_content--></a><br />
+                            <a class="u-post-header-link" href="blog/пост.html"><!--blog_post_header_content-->Поток: 3<!--/blog_post_header_content--></a><br />
                         </h4><!--/blog_post_header--><!--blog_post_content-->
-                        <div class="u-blog-control u-post-content u-text u-text-4"><!--blog_post_content_content-->Пример короткого текста. Lorem ipsum dolor sit amet.<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
-                        <a href="blog/пост-1.html" class="u-blog-control u-btn u-button-style u-btn-2"><!--blog_post_readmore_content-->Читать далее<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
+                        <div class="u-blog-control u-post-content u-text u-text-2"><!--blog_post_content_content-->Описание задания<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
+                        <a href="blog/пост.html" class="u-blog-control u-btn u-button-style u-btn-1"><!--blog_post_readmore_content-->Перейти<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
                     </div>
                 </div><!--/blog_post-->
             </div><!--/blog-->
