--- a/AZSChool/AZSchool.WEB/Views/Home/Teacher.cshtml
+++ b/AZSChool/AZSchool.WEB/Views/Home/Teacher.cshtml
@@ -1,7 +1,251 @@
-﻿
-@{
-    ViewData["Title"] = "Teacher";
+﻿@{
+    Layout = null;
 }
 
-<h1>Teacher</h1>
+<!DOCTYPE html>
+<html style="font-size: 16px;">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <meta name="page_type" content="np-template-header-footer-from-plugin">
+    <title>Teacher</title>
+    <link rel="stylesheet" href="~/css/nicepage.css" media="screen">
+    <link rel="stylesheet" href="~/css/Student.css" media="screen">
+    <script class="u-script" type="text/javascript" src="~/js/jquery.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="~/js/nicepage.js" defer=""></script>
+    <meta name="generator" content="Nicepage 3.6.1, nicepage.com">
 
+
+
+
+    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
+
+
+
+    <meta property="og:title" content="Student">
+    <meta property="og:type" content="website">
+    <meta name="theme-color" content="#73a3de">
+    <link rel="canonical" href="index.html">
+    <meta property="og:url" content="index.html">
+</head>
+<body class="u-body">
+    <header class="u-clearfix u-header u-sticky u-white u-header" id="sec-e20f">
+        <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+            <img src="~/images/photo_2021-02-10_14-38-33.jpg" alt="" class="u-align-left u-image u-image-default u-image-1" data-image-width="300" data-image-height="70">
+
+            <nav class="u-align-left u-menu u-menu-dropdown u-nav-spacing-25 u-offcanvas u-menu-1">
+                <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; text-transform: uppercase; font-weight: 700;">
+                    <a class="u-btn-text u-button-style u-custom-active-border-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link" href="#" style="padding: 2px 0px; font-size: calc(1em + 4px);">
+                        <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 302 302" style="undefined"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-7b92"></use></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="svg-7b92" x="0px" y="0px" viewBox="0 0 302 302" style="enable-background:new 0 0 302 302;" xml:space="preserve" class="u-svg-content"><g><rect y="36" width="302" height="30"></rect><rect y="236" width="302" height="30"></rect><rect y="136" width="302" height="30"></rect>
+</g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g></svg>
+                    </a>
+                </div>
+                <div class="u-custom-menu u-nav-container">
+                    <ul class="u-custom-font u-nav u-spacing-30 u-text-font u-unstyled u-nav-1">
+                        <li class="u-nav-item">
+                            <a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" style="padding: 10px 0px;">Преподаватель</a><div class="u-nav-popup">
+                                <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-2">
+                                    <li class="u-nav-item">
+                                        <a class="u-button-style u-nav-link">Профиль</a>
+                                    </li>
+                                    <li class="u-nav-item">
+                                        <a class="u-button-style u-nav-link">Настройки</a>
+                                    </li>
+                                    <li class="u-nav-item">
+                                        <a class="u-button-style u-nav-link" href="../Home/Index">Выйти</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="u-custom-menu u-nav-container-collapse">
+                    <div class="u-align-center u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
+                        <div class="u-sidenav-overflow">
+                            <div class="u-menu-close"></div>
+                            <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3">
+                                <li class="u-nav-item">
+                                    <a class="u-button-style u-nav-link" style="padding: 10px 0px;">Студент</a><div class="u-nav-popup">
+                                        <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-4">
+                                            <li class="u-nav-item">
+                                                <a class="u-button-style u-nav-link">Профиль</a>
+                                            </li>
+                                            <li class="u-nav-item">
+                                                <a class="u-button-style u-nav-link">Настройки</a>
+                                            </li>
+                                            <li class="u-nav-item">
+                                                <a class="u-button-style u-nav-link" href="../Home/Index">Выйти</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <section class="u-clearfix u-section-1" id="sec-9533">
+        <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+            <div class="u-expanded-width u-tabs u-tabs-1" style=" margin: 40px 0px 0px 0px;">
+                <ul class="u-tab-list u-unstyled">
+                    <li class="u-tab-item" style="margin: 0px 10px;">
+                        <a class="active u-border-3 u-border-active-grey-75 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style " href="../Home/Teacher">Мои курсы</a>
+                    </li>
+                    <li class="u-tab-item" style="margin: 0px 10px;">
+                        <a class="u-border-3 u-border-active-grey-75 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style " href="../Home/Teacher_InProgress">Не проверенные</a>
+                    </li>
+                    <li class="u-tab-item" style="margin: 0px 10px;">
+                        <a class="u-border-3 u-border-active-grey-75 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style " href="../Home/Teacher_Done">Завершенные</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section class="u-clearfix u-white u-section-2" id="carousel_14f4">
+        <div class="u-clearfix u-sheet u-sheet-1">
+            <h2 class="u-text u-text-1">Мои курсы</h2>
+            <div id="carousel-8627" data-interval="5000" data-u-ride="carousel" class="u-carousel u-expanded-width u-slider u-slider-1">
+                <ol class="u-absolute-hcenter u-carousel-indicators u-carousel-indicators-1">
+                    <li data-u-target="#carousel-8627" class="u-active u-grey-30" data-u-slide-to="0"></li>
+                    <li data-u-target="#carousel-8627" class="u-grey-30" data-u-slide-to="1"></li>
+                </ol>
+                <div class="u-carousel-inner" role="listbox">
+                    <div class="u-active u-align-center u-carousel-item u-container-style u-slide">
+                        <div class="u-container-layout u-container-layout-1">
+                            <div class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-gallery u-layout-grid u-lightbox u-no-transition u-show-text-on-hover u-gallery-1">
+                                <div class="u-gallery-inner u-gallery-inner-1">
+                                    <div class="u-effect-fade u-gallery-item">
+                                        <div class="u-back-slide" data-image-width="720" data-image-height="1080">
+                                            <img class="u-back-image u-expanded" src="~/images/pexels-photo-3601244.jpeg">
+                                        </div>
+                                        <div class="u-over-slide u-shading u-over-slide-1">
+                                            <h3 class="u-gallery-heading"></h3>
+                                            <p class="u-gallery-text"></p>
+                                        </div>
+                                    </div>
+                                    <div class="u-effect-fade u-gallery-item">
+                                        <div class="u-back-slide" data-image-width="1080" data-image-height="1080">
+                                            <img class="u-back-image u-expanded" src="~/images/pexels-photo-3328071.jpeg">
+                                        </div>
+                                        <div class="u-over-slide u-shading u-over-slide-2">
+                                            <h3 class="u-gallery-heading"></h3>
+                                            <p class="u-gallery-text"></p>
+                                        </div>
+                                    </div>
+                                    <div class="u-effect-fade u-gallery-item">
+                                        <div class="u-back-slide" data-image-width="1000" data-image-height="1500">
+                                            <img class="u-back-image u-expanded" src="~/images/pexels-photo-2659177.jpeg">
+                                        </div>
+                                        <div class="u-over-slide u-shading u-over-slide-3">
+                                            <h3 class="u-gallery-heading"></h3>
+                                            <p class="u-gallery-text"></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="u-container-style u-group u-white u-group-1">
+                                <div class="u-container-layout u-container-layout-2">
+                                    <h6 class="u-text u-text-default u-text-2">Пример заголовка</h6>
+                                    <p class="u-text u-text-3">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                </div>
+                            </div>
+                            <div class="u-container-style u-group u-white u-group-2">
+                                <div class="u-container-layout u-container-layout-3">
+                                    <h6 class="u-text u-text-default u-text-4">Пример заголовка</h6>
+                                    <p class="u-text u-text-5">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                </div>
+                            </div>
+                            <div class="u-container-style u-group u-white u-group-3">
+                                <div class="u-container-layout u-container-layout-4">
+                                    <h6 class="u-text u-text-default u-text-6">Пример заголовка</h6>
+                                    <p class="u-text u-text-7">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="u-align-center u-carousel-item u-container-style u-expanded-width u-slide">
+                        <div class="u-container-layout u-container-layout-5">
+                            <div class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-gallery u-layout-grid u-lightbox u-no-transition u-show-text-on-hover u-gallery-2">
+                                <div class="u-gallery-inner u-gallery-inner-2">
+                                    <div class="u-effect-fade u-gallery-item">
+                                        <div class="u-back-slide" data-image-width="720" data-image-height="1080">
+                                            <img class="u-back-image u-expanded" src="~/images/pexels-photo-3601244.jpeg">
+                                        </div>
+                                        <div class="u-over-slide u-shading u-over-slide-4">
+                                            <h3 class="u-gallery-heading"></h3>
+                                            <p class="u-gallery-text"></p>
+                                        </div>
+                                    </div>
+                                    <div class="u-effect-fade u-gallery-item">
+                                        <div class="u-back-slide" data-image-width="1080" data-image-height="1080">
+                                            <img class="u-back-image u-expanded" src="~/images/pexels-photo-3328071.jpeg">
+                                        </div>
+                                        <div class="u-over-slide u-shading u-over-slide-5">
+                                            <h3 class="u-gallery-heading"></h3>
+                                            <p class="u-gallery-text"></p>
+                                        </div>
+                                    </div>
+                                    <div class="u-effect-fade u-gallery-item">
+                                        <div class="u-back-slide" data-image-width="1000" data-image-height="1500">
+                                            <img class="u-back-image u-expanded" src="~/images/pexels-photo-2659177.jpeg">
+                                        </div>
+                                        <div class="u-over-slide u-shading u-over-slide-6">
+                                            <h3 class="u-gallery-heading"></h3>
+                                            <p class="u-gallery-text"></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="u-container-style u-group u-white u-group-4">
+                                <div class="u-container-layout u-container-layout-6">
+                                    <h6 class="u-text u-text-default u-text-8">Пример заголовка</h6>
+                                    <p class="u-text u-text-9">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                </div>
+                            </div>
+                            <div class="u-container-style u-group u-white u-group-5">
+                                <div class="u-container-layout u-container-layout-7">
+                                    <h6 class="u-text u-text-default u-text-10">Пример заголовка</h6>
+                                    <p class="u-text u-text-11">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                </div>
+                            </div>
+                            <div class="u-container-style u-group u-white u-group-6">
+                                <div class="u-container-layout u-container-layout-8">
+                                    <h6 class="u-text u-text-default u-text-12">Пример заголовка</h6>
+                                    <p class="u-text u-text-13">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <a class="u-absolute-vcenter u-border-2 u-border-grey-75 u-carousel-control u-carousel-control-prev u-icon-circle u-spacing-10 u-text-black u-white u-carousel-control-1" href="#carousel-8627" role="button" data-u-slide="prev">
+                    <span aria-hidden="true">
+                        <svg viewBox="0 0 477.175 477.175">
+                            <path d="M145.188,238.575l215.5-215.5c5.3-5.3,5.3-13.8,0-19.1s-13.8-5.3-19.1,0l-225.1,225.1c-5.3,5.3-5.3,13.8,0,19.1l225.1,225
+                    c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4c5.3-5.3,5.3-13.8,0-19.1L145.188,238.575z"></path>
+                        </svg>
+                    </span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="u-absolute-vcenter u-border-2 u-border-grey-75 u-carousel-control u-carousel-control-next u-icon-circle u-spacing-10 u-text-black u-white u-carousel-control-2" href="#carousel-8627" role="button" data-u-slide="next">
+                    <span aria-hidden="true">
+                        <svg viewBox="0 0 477.175 477.175">
+                            <path d="M360.731,229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1,0s-5.3,13.8,0,19.1l215.5,215.5l-215.5,215.5
+                    c-5.3,5.3-5.3,13.8,0,19.1c2.6,2.6,6.1,4,9.5,4c3.4,0,6.9-1.3,9.5-4l225.1-225.1C365.931,242.875,365.931,234.275,360.731,229.075z"></path>
+                        </svg>
+                    </span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </section>
+    
+
+
+</body>
+</html>
